add prod conf